<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.first.nishant.greapptracker.AddAplicationActivity"
        android:orientation="vertical">

        <TextView
            android:text="@string/uni_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"/>
        <AutoCompleteTextView
            android:id="@+id/uni_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:text="@string/deadline"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/uni_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginBottom="10dp">b
        </EditText>
        <TextView
            android:text="@string/field"
            android:textSize="18dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
        <AutoCompleteTextView
            android:id="@+id/uni_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:text="@string/cost"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/uni_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="number"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_round"
            android:textColor="@color/white"
            android:text="@string/add" />

    </LinearLayout>

</ScrollView>
